--- a/V2.md
+++ b/V2.md
@@ -72,27 +72,85 @@ Mac用户终结解决方案可以使用命令行代理[Shadowsocks](https://gith
 * Mac用户推荐使用[iTerm2](https://www.iterm2.com/)，另外推荐配合使用[oh-my-zsh](https://github.com/robbyrussell/oh-my-zsh)增强终端命令行功能。
 
 
-##构建工具目录结构
+##初始
+
 
 ````bash
-SomeProject/
+QidianViewsTool/
+│
+├── gulp                // Gulp 任务目录
+│   ├── build.js      // gulp build
+│   ├── clean.js    // gulp clean folder and files
+│   ├── combo.js        // gulp combo
+│   ├── deploy.js       // gulp zip
+│   ├── images.js // gulp images
+│   ├── javascript.js // gulp sprites
+│   ├── sass.js    // gulp sass
+│   ├── sprites.js  // gulp sprites (to modified)
+│   │
+│   │
+│   ├── hash-tag-map
+│   │   ├──rev-manifest.json // 静态资源hash映射表
+│   │   └──rev-verionId.json //静态资源增量版本号映射表
+│
+├── package.json // 任务package.json
+│
 └── src                   // 项目目录，详见下述项目结构 ↓↓↓
-│   ├── json 
+│   ├── json
 │   ├── node-config
 │   ├── static
-│    └── views // 
+│    └── views // gulp配置入口
 │
-└── Yworkflow  // Yworkflow作为一个旁路文件夹,不建议入项目库
-
+├── .yconfig  // 构建工具基础配置
+├── .csscombo.json // gulp-csscombo 配置文件
+├── .eslintrc  // eslint 配置文件
+├── .gitignore // git忽略文件
+├── gulpfile.js // gulp任务流配置
+├── index.js // 本地服务入口
+├── package.json // 项目说明和依赖
+├── README.md // 说明文档
 ````
-
-
-
-##初始
 
 请注意配置`.yconfig`文件，在这里可以配置项目对应的静态资源文件夹路径,本地调试所需的端口等。
 
 
+##构建工具目录结构
+
+````bash
+QidianViewsTool/
+│
+├── gulp                // Gulp 任务目录
+│   ├── build.js      // gulp build
+│   ├── clean.js    // gulp clean folder and files
+│   ├── combo.js        // gulp combo
+│   ├── deploy.js       // gulp zip
+│   ├── images.js // gulp images
+│   ├── javascript.js // gulp sprites
+│   ├── sass.js    // gulp sass
+│   ├── sprites.js  // gulp sprites (to modified)
+│   │
+│   │
+│   ├── hash-tag-map
+│   │   ├──rev-manifest.json // 静态资源hash映射表
+│   │   └──rev-verionId.json //静态资源增量版本号映射表
+│
+├── package.json // 任务package.json
+│
+└── src                   // 项目目录，详见下述项目结构 ↓↓↓
+│   ├── json
+│   ├── node-config
+│   ├── static
+│    └── views // gulp配置入口
+│
+├── .yconfig  // 构建工具基础配置
+├── .csscombo.json // gulp-csscombo 配置文件
+├── .eslintrc  // eslint 配置文件
+├── .gitignore // git忽略文件
+├── gulpfile.js // gulp任务流配置
+├── index.js // 本地服务入口
+├── package.json // 项目说明和依赖
+├── README.md // 说明文档
+````
 
 #### 开发项目目录结构
 
@@ -125,7 +183,7 @@ src/                          // 项目目录
 │   │ ├── all.qidian.com
 │   │ ├── index.html
 ├──  ├── list.html
-```
+````
 
 
 ## 任务说明
@@ -134,17 +192,9 @@ src/                          // 项目目录
 > 注2：**`./_prelease`**和**`_previews`**分别为发布之前**自动**生成的**静态资源目录**和**EJS模板目录**。
 > 注3:**`_/tmp`**为本地模拟server路径的**临时目录**
 
-**注意:** 所有的命令，均需要在`Yworkflow`路径下操作。
 
 **1. 初始化任务 `npm run init`**
-    执行`npm init`，初始化项目，第一次会先编译和处理所有的静态资源文件，把`src`开发目录的相关资源经过编译和处理后生成到`build`目录，此时构建工具会在`:3234`端口(由`.ycofnig`中的端口决定)开启一个本地服务，你可以通过`localhost:3234`访问配置路由的页面。
-
-
-######关于映射
-
-框架机为了解决多环境、多业务支持，本次起点改造通过多域名的方式，隔离和区分环境机器，有诸如`devr.qidian.com`,`oar.qidian.com`,`rank.qidian.com`等多套域名，对应开发环境有`localr.qidian.com`。
-
-若开发具体某个有二级频道的项目，请在`views`目录下以最终线上路由为基准新建项目文件夹，把相应的模板文件置于其中开发。
+    执行`npm init`，初始化项目，第一次会先编译和处理所有的静态资源文件，把`src`开发目录的相关资源经过编译和处理后生成到`build`目录，此时构建工具会在`:3234`端口开启一个本地服务，你可以通过`localhost:3234`访问配置路由的页面。
 
 **2.生成不使用combo的模板文件`npm run nocombo-publish`**
 
@@ -194,6 +244,16 @@ src/                          // 项目目录
 ####待解决
 
 1. 本地combo模拟（由于需要nginx支持，本地调试较为繁琐，此功能滞后）
+
+
+####关于映射
+
+框架机为了解决多环境、多业务支持，本次起点改造通过多域名的方式，隔离和区分环境机器，有诸如`devr.qidian.com`,`oar.qidian.com`,`rank.qidian.com`等多套域名，对应开发环境有`localr.qidian.com`。
+
+若开发具体某个有二级频道的项目，请在`views`目录下以最终线上路由为基准新建项目文件夹，把相应的模板文件置于其中开发。
+
+请在`src/node-config/domain_alias.js`中配置域名映射，以便正常启动本地服务。
+
 
 
 ####精灵图生成注意事项
